// Food ordering service protobuf
syntax = "proto3";

package napoli;

message OrderEntry {
    int32 id = 1; // the slug name / id of this order entry
    string food = 2;
    string buyer = 3;
    // Deprecated: do not use
    double price_deprecated = 4;
    int64 price_in_millicents = 7;
    bool paid = 5;
}

enum OrderState {
    INVALID = 0;
    OPEN = 1;
    CLOSED = 2;
    DONE = 3;
}

message Order {
    int32 id = 1;
    string menu_url = 2;
    OrderState state = 3;
    repeated OrderEntry entries = 4;
    string timestamp = 5;
}
